--- a/src/main/resources/view/ResultDisplay.fxml
+++ b/src/main/resources/view/ResultDisplay.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
 <ScrollPane fx:id="resultDisplayScroll"
             styleClass="pane-with-border"
             xmlns="http://javafx.com/javafx/8"
@@ -9,6 +10,13 @@
             hbarPolicy="NEVER"
             fitToHeight="true"
             fitToWidth="true"
-            hvalue="1">
-    <VBox fx:id="responseContainer"/>
+            hvalue="1"
+            vbarPolicy="ALWAYS">
+            <!--scroll bar won't appear without this for some reason-->
+
+    <VBox fx:id="responseContainer">
+        <padding>
+            <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+        </padding>
+    </VBox>
 </ScrollPane>
